# grl2-jax

./: .gitignore  apex.sh  asap-il.sh  asap.sh  asap2.sh  auto_sync.sh  bash_install.sh  cfr.py  code_debug  code_debug2  compare.py  cp_all  debug  eval  eval.sh  exclude.list  go_debug  grad.py  inf  inf_all  inf_magw  inf_spiel  inf_zero  inf_zero_mb  inf_zero_mujoco  inf_zero_oc  inf_zero_overcooked  install_smarts  inventory.json  kill  launch_plt  mac_auto_sync.sh  main.py  meta_learning.ipynb  model_test  mpe_debug  multi_exec.py  papers.py  pg  plot.ipynb  (+39 more)
algo/: notes.md  readme.md  run.py
buffer/: ppo_buffer.py
core/: agent.py  base.py  builder.py  checkpoint.py  dataset.py  decorator.py  ensemble.py  log.py  mixin.py  module.py  monitor.py  names.py  optimizer.py  optimizers.py  ray_dataset.py  record.py  strategy.py  tf_config.py  typing.py  utils.py
cpp/: CMakeLists.txt  torch_eval  torch_eval.cpp
distributed/: actor_manager.py  config.yaml  coordinator.py  eval.py  param_server.py  rank.py  train.py  trainer_manager.py  typing.py
distribution/: actor_manager.py  config.yaml  coordinator.py  trainer_manager.py
env/: __init__.py  aircombat1v1.py  atari.py  atari_wrapper.py  baselines.py  builtin.py  bypass.py  card.py  cls.py  deepmind_wrappers.py  dmc.py  dummy.py  env.py  envspec.py  flycontrol.py  func.py  gd.py  grf.py  gym.py  gym_env.py  hn_smarts.py  huaru5v5.py  ma_mujoco.py  magw.py  make.py  matrix.py  mpe.py  name.py  openspiel.py  overcooked.py  pg.py  procgen.py  random.py  random_agent.py  ray_env.py  sagw.py  smac.py  smac2.py  (+7 more)
(+2744 files in other folders)
